--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This project creates a Blockchain application to store data into the blocks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "Udacity - jose.morales@udacity.com",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
     "hex2ascii": "0.0.3",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.2"
   }
 }
